fixed a wrong width size

--- a/client/src/components/entryForm-style.css
+++ b/client/src/components/entryForm-style.css
@@ -32,7 +32,7 @@
     max-width: 250px;
   }
   .entry-form {
-    max-width: 280px;
+    max-width: 300px;
     max-height: auto;
   }
   .button {
